--- a/consulta.html
+++ b/consulta.html
@@ -84,7 +84,7 @@
         </div>
     </main>
             <footer>        
-                div class="footer-dev">
+                <div class="footer-dev">
                     <p>Site desenvolvido por:</p>
                         <ul>
                         <li>
